<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn07"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn07Click"
                android:text="7"
                tools:text="@string/button_07" />

            <Button
                android:id="@+id/btn08"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn08Click"
                android:text="8"
                tools:text="@string/button_08" />

            <Button
                android:id="@+id/btn09"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn09Click"
                android:text="9"
                tools:text="@string/button_09" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDivideClick"
                android:text="/"
                tools:text="@string/button_Div" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn04"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn04Click"
                android:text="4"
                tools:text="@string/button_04" />

            <Button
                android:id="@+id/btn05"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn05Click"
                android:text="5"
                tools:text="@string/button_05" />

            <Button
                android:id="@+id/btn06"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn06Click"
                android:text="6"
                tools:text="@string/button_06" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMultiplyClick"
                android:text="X"
                tools:text="@string/button_Mul" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn01"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn01Click"
                android:text="1"
                tools:text="@string/button_01" />

            <Button
                android:id="@+id/btn02"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn02Click"
                android:text="2"
                tools:text="@string/button_02" />

            <Button
                android:id="@+id/btn03"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn03Click"
                android:text="3"
                tools:text="@string/button_03" />

            <Button
                android:id="@+id/btnMinus"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnMinusClick"
                android:text="-"
                tools:text="@string/button_Sub" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnClearClick"
                android:text="CE"
                tools:text="@string/button_Cle" />

            <Button
                android:id="@+id/btn00"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btn00Click"
                android:text="0"
                tools:text="@string/button_00" />

            <Button
                android:id="@+id/btnDot"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnDotClick"
                android:text="."
                tools:text="@string/button_de" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="btnAddClick"
                android:text="+"
                tools:text="@string/button_add" />

        </LinearLayout>

        <Button
            android:id="@+id/btnResult"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="btnResultClick"
            android:text="="
            app:rippleColor="#A84242"
            tools:text="@string/button_equal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>